# AI-APP

./: main.py  pyproject.toml  requirements.txt
react-langchain-tool-decorator/: callbacks.py  main.py
react-search-agent/: main.py  prompt.py  schemas.py
